fix about section spacing

--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ transition: all 0.35s;
 }
 
 #about p:nth-of-type(2) {
-	margin-top: 10%;
+	margin-top: 80px;
 }
 
 .heading{
